hphp/hack/test/typecheck/expression_trees/variable_call.php.like_types.exp
File "variable_call.php", line 6, characters 20-90:
Typing error (Typing[4110])
  File "variable_call.php", line 6, characters 20-90:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "variable_call.php", line 7, characters 10-14:
Typing error (Typing[4110])
  File "variable_call.php", line 7, characters 10-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 34, characters 5-45:
  But got `dynamic` because it is an unenforceable type
